# Codex-Chat_With_GCP_Client_Edition

./: CHANGELOG.md  README.md  START.bat  pyproject.toml
src/codex_chat_gcp/: config.py  main.py  sidebar.py  utils.py
